# ChangeLog for dev-ruby/rspec-rails
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-rails/ChangeLog,v 1.62 2012/12/29 11:16:05 graaff Exp $

  29 Dec 2012; Hans de Graaff <graaff@gentoo.org> rspec-rails-2.12.0.ebuild:
  Add missing dependency on rspec itself that is present in the gemspec.

  29 Dec 2012; Hans de Graaff <graaff@gentoo.org> -rspec-rails-2.11.0.ebuild:
  Cleanup.

*rspec-rails-2.12.0 (15 Nov 2012)

  15 Nov 2012; Hans de Graaff <graaff@gentoo.org> +rspec-rails-2.12.0.ebuild:
  Version bump.

*rspec-rails-2.11.4 (15 Oct 2012)

  15 Oct 2012; Hans de Graaff <graaff@gentoo.org> +rspec-rails-2.11.4.ebuild:
  Version bump.

  16 Sep 2012; Hans de Graaff <graaff@gentoo.org> -rspec-rails-2.5.0.ebuild,
  -rspec-rails-2.6.0.ebuild:
  Cleanup.

  14 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> metadata.xml:
  Update metadata.xml so that it's the same as most other packages.

  23 Jul 2012; Andreas Schuerch <nativemad@gentoo.org>
  rspec-rails-2.10.1.ebuild:
  x86 keyworded, see bug 417587

*rspec-rails-2.11.0 (15 Jul 2012)

  15 Jul 2012; Hans de Graaff <graaff@gentoo.org> +rspec-rails-2.11.0.ebuild:
  Version bump.

*rspec-rails-2.10.1 (10 Jun 2012)

  10 Jun 2012; Hans de Graaff <graaff@gentoo.org> +rspec-rails-2.10.1.ebuild:
  Version bump. Drop x86 keyword, bug 417587.

  17 May 2012; Thomas Kahle <tomka@gentoo.org> rspec-rails-2.6.1-r1.ebuild:
  marked ~x86 per bug 396547

  01 May 2012; Raúl Porcel <armin76@gentoo.org> rspec-rails-1.3.4.ebuild,
  rspec-rails-2.6.1.ebuild:
  Drop ia64/sparc keywords

  07 Feb 2012; Hans de Graaff <graaff@gentoo.org> -rspec-rails-1.2.9.ebuild:
  Remove old version.

  06 Feb 2012; Brent Baude <ranger@gentoo.org> rspec-rails-1.3.4.ebuild:
  Marking rspec-rails-1.3.4 ppc for bug 380041

*rspec-rails-2.6.1-r1 (01 Feb 2012)

  01 Feb 2012; Hans de Graaff <graaff@gentoo.org> +rspec-rails-2.6.1-r1.ebuild: