@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/rspec-rails
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-rails/ChangeLog,v 1.62 2012/12/29 11:16:05 graaff Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-rails/ChangeLog,v 1.63 2013/01/08 06:36:42 graaff Exp $
+
+*rspec-rails-2.12.1 (08 Jan 2013)
+
+  08 Jan 2013; Hans de Graaff <graaff@gentoo.org> +rspec-rails-2.12.1.ebuild:
+  Version bump.
 
   29 Dec 2012; Hans de Graaff <graaff@gentoo.org> rspec-rails-2.12.0.ebuild:
   Add missing dependency on rspec itself that is present in the gemspec.
